# vala-rofi-polkit

./: LICENSE  Makefile  README.md  main.vala  meson.build  rofi-polkit.sh  vala-polkit-rofi
